[project]
name = "chat_activity"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "heko", email = "91366057+hkohko@users.noreply.github.com" },
]
dependencies = [
    "chat-downloader>=0.2.8",
    "numpy>=2.2.1",
    "matplotlib>=3.10.0",
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "lxml>=5.3.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python src/chat_activity/main.py"
